--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
-/*  your css code here. If applicable */
+body{
+	background-color: #f8f8f8;
+	font-family: Arial;
+}
+.book-library{
+	background-color: #ffffff;
+}
+.heading{
+	text-align:center;
+}
+.book{
+	margin-bottom: 20px;
+}
+.book .title, .book .author, .book .price {
+    margin: 0;
+}
+.img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100%;
+}
+.price-btn{
+	width:100%;
+	padding: 10px;
+	background-color: green;
+	color: white;
+	border: none;
+	font-size: 20px;
+}
