--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
 	background-color: #f8f8f8;
-	font-family: Arial;
+	font-family: Arial, sans-serif;
 }
 .book-library{
 	background-color: #ffffff;
@@ -11,7 +11,9 @@ body{
 .book{
 	margin-bottom: 20px;
 }
-.book .title, .book .author, .book .price {
+.book-description .title,
+.book-description .author,
+.book-description .price {
     margin: 0;
 }
 .img{
@@ -20,10 +22,13 @@ body{
 	margin-right: auto;
 	max-width: 100%;
 }
+.author{
+	color:rgb(119, 119, 119);
+}
 .price-btn{
 	width:100%;
 	padding: 10px;
-	background-color: green;
+	background-color: rgb(46, 204, 113);
 	color: white;
 	border: none;
 	font-size: 20px;
